--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.0",
-    "framer-motion": "^5.5.4",
+    "framer-motion": "^4",
     "moralis": "^0.0.169",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-moralis": "^0.3.1",
-    "react-typewriter": "^0.4.1"
+    "react-typewriter": "^0.4.1",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
